<resources>
    <string name="app_name">Waste To Taste</string>
    <string name="searchbar_recipe_hint">Cari resep</string>
    <string name="searchbar_ingredients_hint">Cari bahan</string>
    <string name="title_home">Beranda</string>
    <string name="title_pantry">Bahan</string>
    <string name="title_recipe">Resep</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_settings">Pengaturan</string>
    <string name="recipe_name">Nama Resep</string>
    <string name="ingredients_needed">Anda membutuhkan n bahan lagi</string>
    <string name="ingredients">bahan</string>
    <string name="greetings">Halo!</string>
    <string name="greetings2">Mau masak apa hari ini?</string>
    <string name="tampilan">Tampilan</string>
    <string name="tema">Tema</string>
    <string name="akun">Akun</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="keluar">Keluar</string>
    <string name="email">Email</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="dummy_email">user@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account_info">Account Info</string>
    <string name="simpan">Simpan</string>
    <string name="change_password">Ubah Password</string>
    <string name="change_email">Ubah Email</string>
    <string name="dummy_password">12345678</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="account_information_title">Informasi Akun</string>
    <string name="title_more">More</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="sign_up">Daftar</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="sign_up_instruction">Daftar di bawah ini untuk memulai</string>
    <string name="log_in">Masuk</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="welcome_back">Selamat Datang Kembali!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="delete_all">Hapus Semua</string>
    <string name="nullEmail">Email tidak boleh kosong</string>
    <string name="nullPass">Password tidak boleh kosong</string>
    <string name="failedLogin">Pastikan kamu memasukkan data yang benar</string>
    <string name="mismatchPass">Passwords tidak cocok</string>
    <string name="invalidEmailAddress">Format email salah. Dibutuhkan "@"</string>
    <string name="emailIsInUse">Email sudah digunakan, pilih email lain</string>
    <string name="nullName">Nama tidak boleh kosong</string>
    <string name="passwordLess">Password harus lebih dari 8 karakter</string>
    <string name="nullConfirmPass">Konfirmasi password tidak boleh kosong</string>
    <string name="halouser">Halo, %1$s!</string>
    <string name="logout">Log Out</string>
    <string name="logoutWarn">Kamu yakin mau keluar?</string>
    <string name="logoutNo">Tidak</string>
    <string name="logoutYes">Ya</string>
    <string name="logoutSucceed">Sukses Logout</string>
    <string name="create_account">Buat Akun</string>
    <string name="login_to_account">Masuk Akun</string>
    <string name="get_started_instruction">Ubah sisa bahan makananmu menjadi hidangan lezat!</string>
    <string name="get_started">Mulai</string>
    <string name="dialog_delete_all_desc">Data yang sudah dihapus tidak dapat dikembalikan</string>
    <string name="dialog_delete_all_title">Hapus semua bahan?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
</resources>