<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tampilan"
        android:fontFamily="@font/inter_regular"
        android:layout_marginVertical="5dp"
        android:textSize="13sp"
        android:textColor="?attr/colorOutline"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btn_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:padding="13dp"
        android:textSize="14sp"
        android:paddingStart="40dp"
        android:text="@string/tema"
        android:gravity="left"
        android:textColor="?attr/colorOnSurface"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun"
        android:fontFamily="@font/inter_regular"
        android:layout_marginVertical="5dp"
        android:textColor="?attr/colorOutline"
        android:textSize="13sp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btn_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:padding="13dp"
        android:textSize="14sp"
        android:paddingStart="40dp"
        android:text="@string/informasi_akun"
        android:gravity="left"
        android:textColor="?attr/colorOnSurface"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:padding="13dp"
        android:paddingStart="40dp"
        android:text="@string/keluar"
        android:gravity="left"
        android:textColor="?attr/colorOnSurface"/>

</LinearLayout>