<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="?attr/actionBarSize"
            app:titleTextAppearance="@style/TextAppearance.Settings"
            app:title="@string/change_password"
            app:navigationIconTint="?attr/colorOnSurface"
            app:navigationIcon="@drawable/ic_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintTop_toBottomOf="@id/AppBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_password"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:textColor="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/tv_old_password"
        app:layout_constraintStart_toStartOf="@id/tv_old_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintTop_toBottomOf="@id/edt_old_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_password"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:textColor="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/tv_new_password"
        app:layout_constraintStart_toStartOf="@id/tv_new_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintTop_toBottomOf="@id/edt_new_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_password"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:textColor="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
        app:layout_constraintStart_toStartOf="@id/tv_confirm_password"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="52dp"
        android:text="@string/simpan"
        android:fontFamily="@font/inter_semi_bold"
        android:backgroundTint="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintHorizontal_bias="1"/>


</androidx.constraintlayout.widget.ConstraintLayout>