<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="?attr/actionBarSize"
            app:titleTextAppearance="@style/TextAppearance.Settings"
            app:title="@string/change_email"
            app:navigationIconTint="?attr/colorOnSurface"
            app:navigationIcon="@drawable/ic_back"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/iv_email"
        android:layout_marginTop="12dp"
        style="@style/ImageView.Auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        />

    <com.capstone.wastetotaste.cv.EmailCV
        android:id="@+id/edt_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="@id/iv_email"
        android:text="@string/dummy_email"
        app:layout_constraintBottom_toBottomOf="@id/iv_email"
        app:layout_constraintStart_toStartOf="@id/iv_email"
        app:layout_constraintEnd_toEndOf="@id/iv_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/EditText.Auth"
        />

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_email"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@id/iv_email"
        app:layout_constraintTop_toTopOf="@id/iv_email"
        app:layout_constraintBottom_toBottomOf="@id/iv_email"
        app:layout_constraintEnd_toStartOf="@id/edt_email"
        android:backgroundTint="?attr/colorOnSurface"
        />


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/email"
        android:textColor="?attr/colorOnSurface"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBar" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_marginTop="12dp"
        style="@style/ImageView.Auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        />


    <com.capstone.wastetotaste.cv.PassCV
        android:id="@+id/edt_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toTopOf="@id/iv_password"
        app:layout_constraintBottom_toBottomOf="@id/iv_password"
        app:layout_constraintStart_toStartOf="@id/iv_password"
        app:layout_constraintEnd_toEndOf="@id/iv_password"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"
        style="@style/EditText.Auth"
        />

    <ImageButton
        android:id="@+id/btn_eye_signup"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="@id/iv_password"
        app:layout_constraintTop_toTopOf="@id/iv_password"
        app:layout_constraintBottom_toBottomOf="@id/iv_password"
        android:backgroundTint="?attr/colorOutlineVariant"
        android:background="@drawable/ic_eye" />

    <ImageView
        android:id="@+id/img_password"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_password"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@id/iv_password"
        app:layout_constraintTop_toTopOf="@id/iv_password"
        app:layout_constraintBottom_toBottomOf="@id/iv_password"
        app:layout_constraintEnd_toStartOf="@id/edt_password"
        android:backgroundTint="?attr/colorOnSurface" />


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintTop_toBottomOf="@id/iv_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="?attr/colorOnSurface"
        android:fontFamily="@font/inter_bold"
        android:text="@string/simpan"
        android:textColor="?attr/colorSurface"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_password" />


</androidx.constraintlayout.widget.ConstraintLayout>