<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_account"
            android:textColor="?attr/colorOnSurface"
            android:fontFamily="@font/inter_bold"
            android:textSize="28sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_instruction"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="35dp"
            android:alpha="0"
            tools:alpha="1"/>

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/inter_regular"
            android:text="Silahkan masuk untuk melanjutkan"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14.5sp"
            app:layout_constraintBottom_toTopOf="@+id/iv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            android:alpha="0"
            tools:alpha="1" />

        <ImageView
            android:id="@+id/iv_email"
            style="@style/ImageView.Auth"
            app:layout_constraintBottom_toTopOf="@id/iv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction"
            android:alpha="0"
            tools:alpha="1"/>

        <com.capstone.wastetotaste.cv.EmailCV
            android:autofillHints="emailAddress"
            android:id="@+id/CVEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="@id/iv_email"
            app:layout_constraintBottom_toBottomOf="@id/iv_email"
            app:layout_constraintStart_toStartOf="@id/iv_email"
            app:layout_constraintEnd_toEndOf="@id/iv_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/EditText.Auth"
            android:alpha="0"
            tools:alpha="1"/>


        <ImageView
            android:id="@+id/img_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@id/iv_email"
            app:layout_constraintTop_toTopOf="@id/iv_email"
            app:layout_constraintBottom_toBottomOf="@id/iv_email"
            app:layout_constraintEnd_toStartOf="@id/CVEmail"
            android:backgroundTint="?attr/colorOnSurface"
            android:alpha="0"
            tools:alpha="1"/>

        <ImageView
            android:id="@+id/iv_password"
            android:layout_marginTop="12dp"
            style="@style/ImageView.Auth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_email"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            android:alpha="0"
            tools:alpha="1"
            />


        <com.capstone.wastetotaste.cv.PassCV
            android:id="@+id/PasswordLogin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="60dp"
            app:layout_constraintTop_toTopOf="@id/iv_password"
            app:layout_constraintBottom_toBottomOf="@id/iv_password"
            app:layout_constraintStart_toStartOf="@id/iv_password"
            app:layout_constraintEnd_toEndOf="@id/iv_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditText.Auth"
            android:alpha="0"
            tools:alpha="1"/>


        <ImageButton
            android:id="@+id/btn_eye_login"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_eye"
            android:backgroundTint="?attr/colorOutlineVariant"
            app:layout_constraintBottom_toBottomOf="@id/iv_password"
            app:layout_constraintEnd_toEndOf="@id/iv_password"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toEndOf="@+id/PasswordLogin"
            app:layout_constraintTop_toTopOf="@id/iv_password"
            android:alpha="0"
            tools:alpha="1"/>

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_password"
            app:layout_constraintStart_toStartOf="@id/iv_password"
            app:layout_constraintTop_toTopOf="@id/iv_password"
            app:layout_constraintBottom_toBottomOf="@id/iv_password"
            app:layout_constraintEnd_toStartOf="@id/PasswordLogin"
            android:backgroundTint="?attr/colorOnSurface"
            android:alpha="0"
            tools:alpha="1"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="17dp"
            android:text="@string/log_in"
            android:fontFamily="@font/inter_bold"
            android:backgroundTint="?attr/colorOnSurface"
            app:layout_constraintTop_toBottomOf="@+id/iv_password"
            app:layout_constraintBottom_toBottomOf="@id/tv_already_have_account"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:textColor="?attr/colorSurface"
            android:alpha="0"
            tools:alpha="1"/>

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/inter_regular"
            android:textSize="15sp"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="10dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_to_signup"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:alpha="0"
            tools:alpha="1"/>

        <TextView
            android:id="@+id/btn_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="6dp"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14.5sp"
            android:clickable="true"
            android:fontFamily="@font/inter_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
            app:layout_constraintTop_toTopOf="@id/tv_already_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp"
            android:alpha="0"
            tools:alpha="1"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarStyle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>